--- a/webapp/src/style.css
+++ b/webapp/src/style.css
@@ -8,6 +8,14 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: 0 auto;
+    padding: 20px;
+    max-width: 1920px;
+}
+
+.main {
+    width: 100%;
+    display: flex;
 }
 
 #sliders {
@@ -17,6 +25,8 @@ body {
     gap: 10px;
     width: 80%;
     margin-top: 20px;
+    width: 50%;
+    padding: 20px;
 }
 .group-label.group-label-open + .group-samples-wrapper{
     display: block;
@@ -55,4 +65,21 @@ input[type="range"] {
 }
 .sample-fields-groul-label {
     text-align: center;
+}
+
+#console {
+    width: 50%;
+    padding: 20px;
+}
+#console-content {
+    font-family: 'Courier New', Courier, monospace;
+    color: #fff;
+    background-color: rgb(25, 24, 26);
+    padding: 20px;
+    height: 100%;
+    min-height: 600px;
+    overflow-y: auto;
+}
+#console-content p {
+    margin: 10px 0;
 }
